# little-tools

./: Cargo.toml  README.md  install.sh
.github/workflows/: test.yml
align-mtimes/: Cargo.toml
align-mtimes/src/: main.rs
align-mtimes/tests/: align_mtimes.rs
alsort/: Cargo.toml
alsort/src/: main.rs
cf/: Cargo.toml
cf/src/: main.rs
cf/tests/: cf.rs
common/: Cargo.toml
common/src/: lib.rs  macros.rs  spec_helper.rs
cs/: Cargo.toml
cs/src/: main.rs
cs/tests/: cs.rs
flink/: Cargo.toml  README.md
flink/src/: main.rs
fseq/: Cargo.toml
fseq/src/: main.rs
fseq/src/subcommands/: dir_consolidate.rs  dir_num_by_age.rs  file_flip.rs  file_set.rs  file_unset.rs  mod.rs
fseq/src/utils/: common.rs  dir.rs  file.rs  file_tokens.rs  macros.rs  mod.rs  spec_helper.rs  types.rs
fseq/tests/: fseq_dir_consolidate.rs  fseq_dir_num_by_age.rs  fseq_file_flip.rs  fseq_file_set.rs  fseq_file_unset.rs
fseq/tests/resources/nodot/: nodot.1234.sfx
mixup/: Cargo.toml
mixup/src/: main.rs
mixup/src/utils/: all_chars.rs  all_words.rs  files.rs  line_words.rs  lines.rs  mod.rs
mixup/tests/: mixup_all_words.rs  mixup_files.rs  mixup_line_words.rs  mixup_lines.rs
mixup/tests/resources/: file_1
mixup/tests/resources/all_words/: f1  f2
mmv/: Cargo.toml
mmv/src/: main.rs  replace.rs
mmv/tests/: mmv.rs
randos/: Cargo.toml
randos/src/: main.rs
randos/src/utils/: actions.rs  dir.rs  filter.rs  mod.rs  namer.rs  spec_helper.rs  types.rs
randos/tests/: randos_cp.rs  randos_ln.rs  randos_lnh.rs  randos_mv.rs
randos/tests/resources/dir_1/: file_1_1.sfx  file_1_2.sfx  file_1_4
randos/tests/resources/dir_2/: file_2_1.txt  file_2_2.txt  file_2_3.txt
src/cf/: main.rs
src/cs/: main.rs
src/mmv/: main.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs  spec_helper.rs
