[package]
name = "little_tools"
version = "1.0.0"
edition = "2021"

[dependencies]
regex = "1"
clap = { version = "3.1", features = ["derive"] }
lazy_static = "1.4.0"

[[bin]]
name = "cf"
path = "src/cf/main.rs"

[[bin]]
name = "cs"
path = "src/cs/main.rs"

[[bin]]
name = "mmv"
path = "src/mmv/main.rs"
