[package]
name = "align-mtimes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
camino = "1.1.9"
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2.25"
glob = "0.3.2"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
