[package]
name = "fseq"
version = "3.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
camino = "1.1.9"
clap = { version = "4.3", features = ["derive"] }
common = { path = "../common" }
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2.0.17"
camino-tempfile-ext = "0.3.3"
predicates = "3.1.3"
test_utils = { path = "../test_utils" }
