[package]
name = "mixup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
camino = "1.1.9"
clap = { version = "4.3", features = ["derive"] }
rand = "0.9.0"
common = { path = "../common" }
assert_cmd = "2.0.16"

[dev-dependencies]
assert_cli = "0.6.3"
test_utils = { path = "../test_utils" }
