[package]
name = "mixup"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
assert_cmd = "2.0.16"
camino = "1.1.9"
clap = { version = "4.3", features = ["derive"] }
common = { path = "../common" }
rand = "0.9.0"

[dev-dependencies]
camino-tempfile-ext = "0.3.3"
test_utils = { path = "../test_utils" }
