[package]
name = "mmv"
version = "4.0.2"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
camino = "1.1.9"
clap = { version = "4.5", features = ["derive"] }
common = { path = "../common" }
regex = "1"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.2"
predicates = "3.1.3"
test_utils = { path = "../test_utils" }
