[package]
name = "randos"
version = "1.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
camino = "1.1"
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2"
pathdiff = { version = "0.2.3", features = ["camino"] }
rand = "0.9"
regex = "1"
sha1_smol = "1.0"
tempfile = "3.15"
time = "0.3"

[dev-dependencies]
assert_unordered = "0.3"
test_utils = { path = "../test_utils" }
